--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Practica de DOM implementado metodos del objeto document" />
+    <meta
+      name="description"
+      content="Practica de DOM implementado metodos del objeto document"
+    />
     <meta name="keywords" content="Practica de DOM, JS, document" />
     <meta name="author" content="Ramiro Coronel" />
     <!-- CSS only -->
@@ -18,8 +21,116 @@
     <title>Pratica de DOM</title>
   </head>
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled">Disabled</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-success" type="submit">
+                Search
+              </button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section class="bg-dark text-light py-4">
+        <article class="container">
+          <h1>Practica de DOM</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
+            quaerat nihil velit nulla facere, tenetur quo obcaecati fugit
+            asperiores eveniet autem et illo quos dolores animi. Modi eum rerum
+            fugiat voluptatibus atque veniam corrupti, ipsam quasi. Suscipit vel
+            assumenda obcaecati quos, est iste distinctio ipsam veniam quam
+            nobis culpa sint.
+          </p>
+          <button class="btn btn-primary">Cambiar</button>
+        </article>
+      </section>
+      <section class="container my-4">
+        <h2>Crear elementos html desde el archivo de JavaScript</h2>
+        <hr />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit,
+          quisquam distinctio velit autem adipisci accusantium. Illum
+          dignissimos magnam placeat similique ea architecto ipsam consequuntur
+          unde enim qui, aut reiciendis iste amet tenetur nulla in, consectetur
+          quibusdam itaque quam impedit, doloribus esse. Dolores suscipit nisi
+          quas iste sequi nihil minus ullam impedit laboriosam? Saepe
+          praesentium temporibus ea autem sunt quis ab nihil nulla debitis?
+          Consequuntur blanditiis iusto laboriosam consequatur debitis commodi
+          in quae pariatur dignissimos corporis dolor, fugit eius dolore
+          voluptatem maxime esse ad veniam, magni numquam tempore repellat.
+          Temporibus explicabo quidem accusantium velit, impedit repellendus
+          sequi ipsa illo beatae tempora illum laudantium quaerat eum vel
+          officiis ducimus commodi dolor harum odit nulla consequatur nesciunt
+          architecto recusandae. Illum ab possimus corrupti, totam dolore ex
+          officiis neque ratione aperiam ad? Saepe, quam sint, debitis eos sed
+          placeat voluptatum quis aperiam omnis, quisquam quaerat ipsa corrupti
+          fugit veniam nihil cumque expedita accusantium ut.
+        </p>
+        <button class="btn btn-outline-primary">Ver mas ...</button>
+      </section>
+    </main>
+    <footer class="bg-dark text-light py-3 text-center">
+        <p>&copy;Todos los derechos reservados</p>
+    </footer>
     <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-<script src="js/app.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
